--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.active {
+  background-color: #f0ecec;
+  
+  border : 1px solid blue;
+  border-radius: 4px;
+}
+
+.navlink {
+  
+  color: rgb(26, 11, 68);
+  padding: 4px 12px;
+  margin: 10px;
+  font-weight: 500;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 100%;
+}
+
+.ayaths {
+  text-align: justify;
+  direction:rtl;  
+  line-height: 200%;
+  background-color: rgb(245, 212, 212);
+  border-radius: 8px;
+  color:#756a04;
+  font-size: 18px;
+  padding: 4px 4px;
+  margin: 4px;
+
+}
