--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  direction: rtl;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,15 +14,13 @@ code {
 }
 
 .active {
-  background-color: #f0ecec;
-  
-  border : 1px solid blue;
-  border-radius: 4px;
+  background-color: #ffffff;
+  border : 2px solid rgb(255, 129, 11);
+  border-radius: 6px;
 }
 
 .navlink {
-  
-  color: rgb(26, 11, 68);
+  color: rgb(17, 4, 51);
   padding: 4px 12px;
   margin: 10px;
   font-weight: 500;
@@ -71,17 +70,16 @@ code {
 .searchResponse:nth-of-type(even) {
   background-color: rgb(1, 17, 59);
   color:rgba(0, 183, 255, 0.986);
+  border-block-end-style: groove;
   
 }
 
 .searchResponse:nth-of-type(odd) {
-  background-color: rgb(135, 207, 230);
+  background-color: rgba(135, 206, 230, 0.637);
   color:rgb(1, 17, 59);
   font-size: 12px;
   font-weight: bolder;
-  margin: 2px;
   text-align: center;
-  align-self: center;
 }
 
 .searchResponse {
@@ -91,7 +89,25 @@ code {
   font-size: 22px;
   padding: 5px 5px;
   margin: 6px;
-  border-block-end-style: groove;
+}
+
+.searchBar {
+  background-color: aliceblue;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 22px;
+  padding: 8px 8px;
+  margin: 10px;
+  
+}
+
+.textSearch {
+  text-align: center;
+  border-radius: 8px;
+  font-size: 20px;
+  
+  
+  
 }
 
 
